--- a/app/src/main/res/layout/activity_tic_tac_toe.xml
+++ b/app/src/main/res/layout/activity_tic_tac_toe.xml
@@ -87,7 +87,7 @@
                 android:layout_height="120dp"
                 android:layout_margin="5dp"
                 android:background="@drawable/button"
-                android:onClick="clickBtn1"
+                android:onClick="onClickBtn"
                 android:gravity="center"
                 android:textSize="90sp"
                 android:textColor="#00000000"
@@ -95,7 +95,7 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button2"
-                android:onClick="clickBtn2"
+                android:onClick="onClickBtn"
                 android:layout_margin="5dp"
                 android:layout_width="120dp"
                 android:background="@drawable/button"
@@ -107,7 +107,7 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button3"
-                android:onClick="clickBtn3"
+                android:onClick="onClickBtn"
                 android:layout_margin="5dp"
                 android:layout_width="120dp"
                 android:background="@drawable/button"
@@ -124,7 +124,7 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button4"
-                android:onClick="clickBtn4"
+                android:onClick="onClickBtn"
                 android:layout_margin="5dp"
                 android:layout_width="120dp"
                 android:background="@drawable/button"
@@ -136,7 +136,7 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button5"
-                android:onClick="clickBtn5"
+                android:onClick="onClickBtn"
                 android:layout_margin="5dp"
                 android:layout_width="120dp"
                 android:background="@drawable/button"
@@ -149,7 +149,7 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button6"
-                android:onClick="clickBtn6"
+                android:onClick="onClickBtn"
                 android:layout_margin="5dp"
                 android:layout_width="120dp"
                 android:background="@drawable/button"
@@ -166,7 +166,7 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button7"
-                android:onClick="clickBtn7"
+                android:onClick="onClickBtn"
                 android:layout_margin="5dp"
                 android:layout_width="120dp"
                 android:background="@drawable/button"
@@ -178,7 +178,7 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button8"
-                android:onClick="clickBtn8"
+                android:onClick="onClickBtn"
                 android:layout_margin="5dp"
                 android:layout_width="120dp"
                 android:background="@drawable/button"
@@ -190,7 +190,7 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button9"
-                android:onClick="clickBtn9"
+                android:onClick="onClickBtn"
                 android:layout_margin="5dp"
                 android:layout_width="120dp"
                 android:background="@drawable/button"
