--- a/app/src/main/res/layout/activity_tic_tac_toe_duo.xml
+++ b/app/src/main/res/layout/activity_tic_tac_toe_duo.xml
@@ -88,7 +88,7 @@
                 android:layout_height="120dp"
                 android:layout_margin="5dp"
                 android:background="@drawable/button"
-                android:onClick="clickBtn1"
+                android:onClick="onClickBtn"
                 android:gravity="center"
                 android:textSize="90sp"
                 android:textColor="#00000000"
@@ -96,7 +96,7 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button2"
-                android:onClick="clickBtn2"
+                android:onClick="onClickBtn"
                 android:layout_margin="5dp"
                 android:layout_width="120dp"
                 android:background="@drawable/button"
@@ -108,7 +108,7 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button3"
-                android:onClick="clickBtn3"
+                android:onClick="onClickBtn"
                 android:layout_margin="5dp"
                 android:layout_width="120dp"
                 android:background="@drawable/button"
@@ -125,7 +125,7 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button4"
-                android:onClick="clickBtn4"
+                android:onClick="onClickBtn"
                 android:layout_margin="5dp"
                 android:layout_width="120dp"
                 android:background="@drawable/button"
@@ -137,7 +137,7 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button5"
-                android:onClick="clickBtn5"
+                android:onClick="onClickBtn"
                 android:layout_margin="5dp"
                 android:layout_width="120dp"
                 android:background="@drawable/button"
@@ -150,7 +150,7 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button6"
-                android:onClick="clickBtn6"
+                android:onClick="onClickBtn"
                 android:layout_margin="5dp"
                 android:layout_width="120dp"
                 android:background="@drawable/button"
@@ -167,7 +167,7 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button7"
-                android:onClick="clickBtn7"
+                android:onClick="onClickBtn"
                 android:layout_margin="5dp"
                 android:layout_width="120dp"
                 android:background="@drawable/button"
@@ -179,7 +179,7 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button8"
-                android:onClick="clickBtn8"
+                android:onClick="onClickBtn"
                 android:layout_margin="5dp"
                 android:layout_width="120dp"
                 android:background="@drawable/button"
@@ -191,7 +191,7 @@
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button9"
-                android:onClick="clickBtn9"
+                android:onClick="onClickBtn"
                 android:layout_margin="5dp"
                 android:layout_width="120dp"
                 android:background="@drawable/button"
